Work on linting libpeakaboo